--
-- PostgreSQL database dump
--

\restrict VyV5fAvgU8haaDNTxtvwHZu8QsQHJWN0ZHaN4IBczBifsazhiR9yEoNHeDf840j

-- Dumped from database version 18.4 (Ubuntu 18.4-0ubuntu0.26.04.1)
-- Dumped by pg_dump version 18.4 (Ubuntu 18.4-0ubuntu0.26.04.1)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET transaction_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: audit_logs; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.audit_logs (
    id bigint NOT NULL,
    action character varying(255) NOT NULL,
    actor_email character varying(255) NOT NULL,
    actor_role character varying(255) NOT NULL,
    description character varying(1000),
    entity_id bigint,
    entity_type character varying(255) NOT NULL,
    "timestamp" timestamp(6) without time zone NOT NULL
);


ALTER TABLE public.audit_logs OWNER TO akshay_gouda;

--
-- Name: audit_logs_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.audit_logs ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.audit_logs_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: contact_message; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.contact_message (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone,
    email character varying(255),
    message character varying(2000),
    name character varying(255),
    subject character varying(255)
);


ALTER TABLE public.contact_message OWNER TO akshay_gouda;

--
-- Name: contact_message_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.contact_message ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.contact_message_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: issue_activities; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.issue_activities (
    id bigint NOT NULL,
    action character varying(255) NOT NULL,
    created_at timestamp(6) without time zone,
    description character varying(255) NOT NULL,
    issue_id bigint NOT NULL,
    performed_by bigint NOT NULL
);


ALTER TABLE public.issue_activities OWNER TO akshay_gouda;

--
-- Name: issue_activities_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.issue_activities ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.issue_activities_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: issue_attachments; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.issue_attachments (
    id bigint NOT NULL,
    file_name character varying(255) NOT NULL,
    file_path character varying(255) NOT NULL,
    file_type character varying(255),
    uploaded_at timestamp(6) without time zone,
    issue_id bigint NOT NULL,
    uploaded_by bigint NOT NULL
);


ALTER TABLE public.issue_attachments OWNER TO akshay_gouda;

--
-- Name: issue_attachments_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.issue_attachments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.issue_attachments_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: issue_comments; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.issue_comments (
    id bigint NOT NULL,
    comment character varying(255) NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    commented_by bigint NOT NULL,
    issue_id bigint NOT NULL,
    user_id bigint NOT NULL
);


ALTER TABLE public.issue_comments OWNER TO akshay_gouda;

--
-- Name: issue_comments_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.issue_comments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.issue_comments_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: issues; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.issues (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone,
    created_by character varying(255) NOT NULL,
    description character varying(1000) NOT NULL,
    escalated boolean,
    priority_level character varying(255),
    resolved_at timestamp(6) without time zone,
    severity character varying(255) NOT NULL,
    sla_breached boolean NOT NULL,
    sla_due_time timestamp(6) without time zone,
    sla_start_time timestamp(6) without time zone,
    status character varying(255) NOT NULL,
    title character varying(255) NOT NULL,
    triaged boolean,
    assigned_engineer_id bigint,
    project_id bigint NOT NULL,
    CONSTRAINT issues_severity_check CHECK (((severity)::text = ANY ((ARRAY['LOW'::character varying, 'MEDIUM'::character varying, 'HIGH'::character varying, 'CRITICAL'::character varying])::text[]))),
    CONSTRAINT issues_status_check CHECK (((status)::text = ANY ((ARRAY['OPEN'::character varying, 'IN_PROGRESS'::character varying, 'RESOLVED'::character varying, 'CLOSED'::character varying])::text[])))
);


ALTER TABLE public.issues OWNER TO akshay_gouda;

--
-- Name: issues_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.issues ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.issues_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: notifications; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.notifications (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    entity_id bigint,
    entity_type character varying(255),
    message character varying(1000) NOT NULL,
    type character varying(255) NOT NULL
);


ALTER TABLE public.notifications OWNER TO akshay_gouda;

--
-- Name: notifications_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.notifications ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.notifications_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: otp_verification; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.otp_verification (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone,
    email character varying(255),
    expiry_time timestamp(6) without time zone,
    otp character varying(255),
    purpose character varying(255) NOT NULL,
    verified boolean NOT NULL,
    CONSTRAINT otp_verification_purpose_check CHECK (((purpose)::text = ANY ((ARRAY['REGISTER'::character varying, 'FORGOT_PASSWORD'::character varying])::text[])))
);


ALTER TABLE public.otp_verification OWNER TO akshay_gouda;

--
-- Name: otp_verification_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.otp_verification ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.otp_verification_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: project_members; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.project_members (
    project_id bigint NOT NULL,
    user_id bigint NOT NULL
);


ALTER TABLE public.project_members OWNER TO akshay_gouda;

--
-- Name: projects; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.projects (
    id bigint NOT NULL,
    active boolean NOT NULL,
    company character varying(255),
    created_at timestamp(6) without time zone,
    description character varying(10000),
    name character varying(255) NOT NULL,
    manager_id bigint
);


ALTER TABLE public.projects OWNER TO akshay_gouda;

--
-- Name: projects_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.projects ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.projects_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: sla_breaches; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.sla_breaches (
    id bigint NOT NULL,
    breached_at timestamp(6) without time zone,
    delay_minutes bigint,
    sla_due_time timestamp(6) without time zone,
    issue_id bigint NOT NULL
);


ALTER TABLE public.sla_breaches OWNER TO akshay_gouda;

--
-- Name: sla_breaches_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.sla_breaches ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.sla_breaches_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: sla_policies; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.sla_policies (
    id bigint NOT NULL,
    description character varying(1000),
    priority_level character varying(255),
    resolution_time_minutes integer NOT NULL,
    project_id bigint NOT NULL
);


ALTER TABLE public.sla_policies OWNER TO akshay_gouda;

--
-- Name: sla_policies_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.sla_policies ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.sla_policies_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: user_notifications; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.user_notifications (
    id bigint NOT NULL,
    read boolean NOT NULL,
    received_at timestamp(6) without time zone NOT NULL,
    notification_id bigint NOT NULL,
    user_id bigint NOT NULL
);


ALTER TABLE public.user_notifications OWNER TO akshay_gouda;

--
-- Name: user_notifications_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.user_notifications ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.user_notifications_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: users; Type: TABLE; Schema: public; Owner: akshay_gouda
--

CREATE TABLE public.users (
    id bigint NOT NULL,
    company character varying(255),
    email character varying(255) NOT NULL,
    enabled boolean NOT NULL,
    full_name character varying(255) NOT NULL,
    locked boolean NOT NULL,
    must_change_password boolean NOT NULL,
    password character varying(255) NOT NULL,
    role character varying(255),
    token_version integer NOT NULL,
    verified boolean NOT NULL,
    CONSTRAINT users_role_check CHECK (((role)::text = ANY ((ARRAY['SUPER_ADMIN'::character varying, 'ADMIN'::character varying, 'MANAGER'::character varying, 'ENGINEER'::character varying, 'USER'::character varying])::text[])))
);


ALTER TABLE public.users OWNER TO akshay_gouda;

--
-- Name: users_id_seq; Type: SEQUENCE; Schema: public; Owner: akshay_gouda
--

ALTER TABLE public.users ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Data for Name: audit_logs; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.audit_logs (id, action, actor_email, actor_role, description, entity_id, entity_type, "timestamp") FROM stdin;
1	OTP_EMAIL_SENT	system@smartims.local	SYSTEM	OTP email sent for purpose: REGISTER	\N	EMAIL	2026-07-14 07:05:43.555318
2	OTP_GENERATED	system@smartims.local	SYSTEM	OTP generated and sent for purpose: REGISTER	\N	OTP	2026-07-14 07:05:43.560442
3	OTP_VERIFIED	system@smartims.local	SYSTEM	OTP verified successfully for purpose: REGISTER	\N	OTP	2026-07-14 07:07:04.3149
4	USER_CREATED	system@smartims.local	SYSTEM	User account created from pending registration	1	USER	2026-07-14 07:07:04.430408
5	USER_LOGIN_SUCCESS	system@smartims.local	SYSTEM	User logged in successfully	1	USER	2026-07-14 07:07:20.059094
6	USER_LOGIN_SUCCESS	system@smartims.local	SYSTEM	User logged in successfully	1	USER	2026-07-14 08:43:30.139323
7	USER_CREATED_BY_ADMIN	akshaygouda1407@gmail.com	SUPER_ADMIN	User created by admin with role ADMIN	2	USER	2026-07-14 08:54:05.641403
8	NEW_USER_CREDENTIALS_EMAIL_SENT	akshaygouda1407@gmail.com	SUPER_ADMIN	New user credentials email sent to abc.123@gmail.com	\N	EMAIL	2026-07-14 08:54:07.647942
9	OTP_EMAIL_SENT	system@smartims.local	SYSTEM	OTP email sent for purpose: REGISTER	\N	EMAIL	2026-07-14 09:08:26.814015
10	OTP_GENERATED	system@smartims.local	SYSTEM	OTP generated and sent for purpose: REGISTER	\N	OTP	2026-07-14 09:08:26.816155
11	OTP_EMAIL_SENT	system@smartims.local	SYSTEM	OTP email sent for purpose: REGISTER	\N	EMAIL	2026-07-14 09:09:24.496928
12	OTP_GENERATED	system@smartims.local	SYSTEM	OTP generated and sent for purpose: REGISTER	\N	OTP	2026-07-14 09:09:24.499196
13	OTP_VERIFIED	system@smartims.local	SYSTEM	OTP verified successfully for purpose: REGISTER	\N	OTP	2026-07-14 09:10:20.164003
14	USER_CREATED	system@smartims.local	SYSTEM	User account created from pending registration	3	USER	2026-07-14 09:10:20.267508
15	USER_LOGIN_SUCCESS	system@smartims.local	SYSTEM	User logged in successfully	3	USER	2026-07-14 09:10:39.162609
16	USER_CREATED_BY_ADMIN	shravyat01@gmail.com	SUPER_ADMIN	User created by admin with role ADMIN	4	USER	2026-07-14 09:21:36.628681
17	NEW_USER_CREDENTIALS_EMAIL_SENT	shravyat01@gmail.com	SUPER_ADMIN	New user credentials email sent to reena1@gmail.com	\N	EMAIL	2026-07-14 09:21:37.848359
18	USER_LOGIN_SUCCESS	system@smartims.local	SYSTEM	User logged in successfully	1	USER	2026-07-14 09:44:04.427118
\.


--
-- Data for Name: contact_message; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.contact_message (id, created_at, email, message, name, subject) FROM stdin;
\.


--
-- Data for Name: issue_activities; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.issue_activities (id, action, created_at, description, issue_id, performed_by) FROM stdin;
\.


--
-- Data for Name: issue_attachments; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.issue_attachments (id, file_name, file_path, file_type, uploaded_at, issue_id, uploaded_by) FROM stdin;
\.


--
-- Data for Name: issue_comments; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.issue_comments (id, comment, created_at, commented_by, issue_id, user_id) FROM stdin;
\.


--
-- Data for Name: issues; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.issues (id, created_at, created_by, description, escalated, priority_level, resolved_at, severity, sla_breached, sla_due_time, sla_start_time, status, title, triaged, assigned_engineer_id, project_id) FROM stdin;
\.


--
-- Data for Name: notifications; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.notifications (id, created_at, entity_id, entity_type, message, type) FROM stdin;
1	2026-07-14 07:07:04.437874	1	USER	Your account was created successfully.	USER_CREATED
2	2026-07-14 08:54:05.646935	2	USER	A new user account was created for abc.123@gmail.com.	USER_CREATED_BY_ADMIN
3	2026-07-14 09:10:20.271732	3	USER	Your account was created successfully.	USER_CREATED
4	2026-07-14 09:21:36.633458	4	USER	A new user account was created for reena1@gmail.com.	USER_CREATED_BY_ADMIN
\.


--
-- Data for Name: otp_verification; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.otp_verification (id, created_at, email, expiry_time, otp, purpose, verified) FROM stdin;
\.


--
-- Data for Name: project_members; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.project_members (project_id, user_id) FROM stdin;
\.


--
-- Data for Name: projects; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.projects (id, active, company, created_at, description, name, manager_id) FROM stdin;
\.


--
-- Data for Name: sla_breaches; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.sla_breaches (id, breached_at, delay_minutes, sla_due_time, issue_id) FROM stdin;
\.


--
-- Data for Name: sla_policies; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.sla_policies (id, description, priority_level, resolution_time_minutes, project_id) FROM stdin;
\.


--
-- Data for Name: user_notifications; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.user_notifications (id, read, received_at, notification_id, user_id) FROM stdin;
1	f	2026-07-14 07:07:04.443329	1	1
2	f	2026-07-14 08:54:05.649816	2	1
3	f	2026-07-14 08:54:05.652934	2	2
4	f	2026-07-14 09:10:20.274833	3	1
5	f	2026-07-14 09:10:20.278425	3	3
6	f	2026-07-14 09:21:36.636516	4	1
7	f	2026-07-14 09:21:36.639731	4	3
8	f	2026-07-14 09:21:36.642516	4	4
\.


--
-- Data for Name: users; Type: TABLE DATA; Schema: public; Owner: akshay_gouda
--

COPY public.users (id, company, email, enabled, full_name, locked, must_change_password, password, role, token_version, verified) FROM stdin;
1	\N	akshaygouda1407@gmail.com	t	akshay	f	f	$2a$10$a.1Sylipc1cTUxXAby9f.OWmvA1t9A636yIq5jxkCrxanOD0oKWtK	SUPER_ADMIN	0	t
2	ABC Technologies	abc.123@gmail.com	t	John Doe	f	t	$2a$10$naJNQn8yuZ9Fluu2dZBVVOBS3n27EA/ev2Ubvur97nfK6rz/HVs8y	ADMIN	0	t
3	\N	shravyat01@gmail.com	t	shravya	f	f	$2a$10$IW/N93TvcBCQw7QDqJPb2OiIn1y0maWrdh0csm4bZQAYwtCYoQswK	SUPER_ADMIN	0	t
4	STAR	reena1@gmail.com	t	Reena	f	t	$2a$10$nyzx2rPlZOHUs6FKP3fOB.HfeR84lpxKmz6sRaXSdlQFPFsQ46MQK	ADMIN	0	t
\.


--
-- Name: audit_logs_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.audit_logs_id_seq', 18, true);


--
-- Name: contact_message_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.contact_message_id_seq', 1, false);


--
-- Name: issue_activities_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.issue_activities_id_seq', 1, false);


--
-- Name: issue_attachments_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.issue_attachments_id_seq', 1, false);


--
-- Name: issue_comments_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.issue_comments_id_seq', 1, false);


--
-- Name: issues_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.issues_id_seq', 1, false);


--
-- Name: notifications_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.notifications_id_seq', 4, true);


--
-- Name: otp_verification_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.otp_verification_id_seq', 3, true);


--
-- Name: projects_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.projects_id_seq', 1, false);


--
-- Name: sla_breaches_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.sla_breaches_id_seq', 1, false);


--
-- Name: sla_policies_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.sla_policies_id_seq', 1, false);


--
-- Name: user_notifications_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.user_notifications_id_seq', 8, true);


--
-- Name: users_id_seq; Type: SEQUENCE SET; Schema: public; Owner: akshay_gouda
--

SELECT pg_catalog.setval('public.users_id_seq', 4, true);


--
-- Name: audit_logs audit_logs_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.audit_logs
    ADD CONSTRAINT audit_logs_pkey PRIMARY KEY (id);


--
-- Name: contact_message contact_message_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.contact_message
    ADD CONSTRAINT contact_message_pkey PRIMARY KEY (id);


--
-- Name: issue_activities issue_activities_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_activities
    ADD CONSTRAINT issue_activities_pkey PRIMARY KEY (id);


--
-- Name: issue_attachments issue_attachments_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_attachments
    ADD CONSTRAINT issue_attachments_pkey PRIMARY KEY (id);


--
-- Name: issue_comments issue_comments_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_comments
    ADD CONSTRAINT issue_comments_pkey PRIMARY KEY (id);


--
-- Name: issues issues_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issues
    ADD CONSTRAINT issues_pkey PRIMARY KEY (id);


--
-- Name: notifications notifications_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.notifications
    ADD CONSTRAINT notifications_pkey PRIMARY KEY (id);


--
-- Name: otp_verification otp_verification_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.otp_verification
    ADD CONSTRAINT otp_verification_pkey PRIMARY KEY (id);


--
-- Name: projects projects_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.projects
    ADD CONSTRAINT projects_pkey PRIMARY KEY (id);


--
-- Name: sla_breaches sla_breaches_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.sla_breaches
    ADD CONSTRAINT sla_breaches_pkey PRIMARY KEY (id);


--
-- Name: sla_policies sla_policies_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.sla_policies
    ADD CONSTRAINT sla_policies_pkey PRIMARY KEY (id);


--
-- Name: sla_policies uk574mmwdjfqv46ms9m0k8dd7uk; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.sla_policies
    ADD CONSTRAINT uk574mmwdjfqv46ms9m0k8dd7uk UNIQUE (project_id, priority_level);


--
-- Name: users uk6dotkott2kjsp8vw4d0m25fb7; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk6dotkott2kjsp8vw4d0m25fb7 UNIQUE (email);


--
-- Name: projects uk_projects_company_name; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.projects
    ADD CONSTRAINT uk_projects_company_name UNIQUE (company, name);


--
-- Name: user_notifications uktgwraou9gk2rh54qei8iuyfku; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.user_notifications
    ADD CONSTRAINT uktgwraou9gk2rh54qei8iuyfku UNIQUE (user_id, notification_id);


--
-- Name: user_notifications user_notifications_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.user_notifications
    ADD CONSTRAINT user_notifications_pkey PRIMARY KEY (id);


--
-- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_pkey PRIMARY KEY (id);


--
-- Name: issue_activities fk1aee2wcdepy9nakrh5qgw9dow; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_activities
    ADD CONSTRAINT fk1aee2wcdepy9nakrh5qgw9dow FOREIGN KEY (issue_id) REFERENCES public.issues(id);


--
-- Name: issue_attachments fk2dyo59bxvw1293jjxayoib372; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_attachments
    ADD CONSTRAINT fk2dyo59bxvw1293jjxayoib372 FOREIGN KEY (issue_id) REFERENCES public.issues(id);


--
-- Name: issues fk4j2x3reshuu7qj5svh6eacnpt; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issues
    ADD CONSTRAINT fk4j2x3reshuu7qj5svh6eacnpt FOREIGN KEY (project_id) REFERENCES public.projects(id);


--
-- Name: sla_breaches fk9ef4imp65l7h6vj4sb4rnuy6h; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.sla_breaches
    ADD CONSTRAINT fk9ef4imp65l7h6vj4sb4rnuy6h FOREIGN KEY (issue_id) REFERENCES public.issues(id);


--
-- Name: user_notifications fk9f86wonnl11hos1cuf5fibutl; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.user_notifications
    ADD CONSTRAINT fk9f86wonnl11hos1cuf5fibutl FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- Name: project_members fkdki1sp2homqsdcvqm9yrix31g; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.project_members
    ADD CONSTRAINT fkdki1sp2homqsdcvqm9yrix31g FOREIGN KEY (project_id) REFERENCES public.projects(id);


--
-- Name: issue_activities fkf3y66synugi68mjgw8d6jhb35; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_activities
    ADD CONSTRAINT fkf3y66synugi68mjgw8d6jhb35 FOREIGN KEY (performed_by) REFERENCES public.users(id);


--
-- Name: project_members fkgul2el0qjk5lsvig3wgajwm77; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.project_members
    ADD CONSTRAINT fkgul2el0qjk5lsvig3wgajwm77 FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- Name: issue_comments fkke6cclx13rs4jbndfy7qnw43k; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_comments
    ADD CONSTRAINT fkke6cclx13rs4jbndfy7qnw43k FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- Name: issue_comments fkkuh6llohvklwmj80wuttmt0vc; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_comments
    ADD CONSTRAINT fkkuh6llohvklwmj80wuttmt0vc FOREIGN KEY (commented_by) REFERENCES public.users(id);


--
-- Name: issues fknnvfd8w1onrp5r8i9diquq8ui; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issues
    ADD CONSTRAINT fknnvfd8w1onrp5r8i9diquq8ui FOREIGN KEY (assigned_engineer_id) REFERENCES public.users(id);


--
-- Name: issue_attachments fknsjoykwmquev8ot4tdnth8jt4; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_attachments
    ADD CONSTRAINT fknsjoykwmquev8ot4tdnth8jt4 FOREIGN KEY (uploaded_by) REFERENCES public.users(id);


--
-- Name: issue_comments fknvnj0204928o0w1th5jsx4f28; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.issue_comments
    ADD CONSTRAINT fknvnj0204928o0w1th5jsx4f28 FOREIGN KEY (issue_id) REFERENCES public.issues(id);


--
-- Name: sla_policies fkopybc25fwk0ie6vrgj4wiu315; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.sla_policies
    ADD CONSTRAINT fkopybc25fwk0ie6vrgj4wiu315 FOREIGN KEY (project_id) REFERENCES public.projects(id);


--
-- Name: user_notifications fkovvx0ab3h8s9lrm6fppuadn7d; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.user_notifications
    ADD CONSTRAINT fkovvx0ab3h8s9lrm6fppuadn7d FOREIGN KEY (notification_id) REFERENCES public.notifications(id);


--
-- Name: projects fkurl8wb4qjly2c5xwdcpetuxs; Type: FK CONSTRAINT; Schema: public; Owner: akshay_gouda
--

ALTER TABLE ONLY public.projects
    ADD CONSTRAINT fkurl8wb4qjly2c5xwdcpetuxs FOREIGN KEY (manager_id) REFERENCES public.users(id);


--
-- Name: SCHEMA public; Type: ACL; Schema: -; Owner: pg_database_owner
--

GRANT ALL ON SCHEMA public TO akshay_gouda;


--
-- Name: DEFAULT PRIVILEGES FOR SEQUENCES; Type: DEFAULT ACL; Schema: public; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres IN SCHEMA public GRANT ALL ON SEQUENCES TO akshay_gouda;


--
-- Name: DEFAULT PRIVILEGES FOR TABLES; Type: DEFAULT ACL; Schema: public; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres IN SCHEMA public GRANT ALL ON TABLES TO akshay_gouda;


--
-- PostgreSQL database dump complete
--

\unrestrict VyV5fAvgU8haaDNTxtvwHZu8QsQHJWN0ZHaN4IBczBifsazhiR9yEoNHeDf840j

