---
title: Smart IMS - ER Diagram
---

erDiagram
  USERS {
    BIGINT id PK
    VARCHAR full_name "unique"
    VARCHAR email
    VARCHAR password
    VARCHAR company
    VARCHAR role
    BOOLEAN enabled
    BOOLEAN verified
    BOOLEAN locked
    INT token_version
    BOOLEAN must_change_password
  }

  PROJECTS {
    BIGINT id PK
    VARCHAR name "unique"
    VARCHAR description
    BIGINT manager_id FK
    VARCHAR company
    BOOLEAN active
    TIMESTAMP created_at
  }

  PROJECT_MEMBERS {
    BIGINT project_id FK
    BIGINT user_id FK
    "(project_id, user_id)" PK
  }

  ISSUES {
    BIGINT id PK
    VARCHAR title
    VARCHAR description
    VARCHAR severity
    VARCHAR status
    VARCHAR created_by
    VARCHAR priority_level
    BIGINT assigned_engineer_id FK
    BIGINT project_id FK
    TIMESTAMP created_at
    TIMESTAMP resolved_at
    TIMESTAMP sla_start_time
    TIMESTAMP sla_due_time
    BOOLEAN sla_breached
    BOOLEAN escalated
    BOOLEAN triaged
  }

  SLA_POLICIES {
    BIGINT id PK
    VARCHAR priority_level
    INT resolution_time_minutes
    VARCHAR description
    BIGINT project_id FK
    "(project_id, priority_level)" UNIQUE
  }

  SLA_BREACHES {
    BIGINT id PK
    BIGINT issue_id FK
    TIMESTAMP breached_at
    TIMESTAMP sla_due_time
    BIGINT delay_minutes
  }

  ISSUE_ACTIVITIES {
    BIGINT id PK
    BIGINT issue_id FK
    VARCHAR action
    VARCHAR description
    BIGINT performed_by FK
    TIMESTAMP created_at
  }

  ISSUE_COMMENTS {
    BIGINT id PK
    BIGINT issue_id FK
    BIGINT user_id FK
    BIGINT commented_by FK
    VARCHAR comment
    TIMESTAMP created_at
  }

  ISSUE_ATTACHMENTS {
    BIGINT id PK
    BIGINT issue_id FK
    VARCHAR file_name
    VARCHAR file_type
    VARCHAR file_path
    BIGINT uploaded_by FK
    TIMESTAMP uploaded_at
  }

  NOTIFICATIONS {
    BIGINT id PK
    VARCHAR type
    VARCHAR message
    VARCHAR entity_type
    BIGINT entity_id
    TIMESTAMP created_at
  }

  USER_NOTIFICATIONS {
    BIGINT id PK
    BIGINT user_id FK
    BIGINT notification_id FK
    BOOLEAN read
    TIMESTAMP received_at
    "(user_id, notification_id)" UNIQUE
  }

  AUDIT_LOGS {
    BIGINT id PK
    VARCHAR actor_email
    VARCHAR actor_role
    VARCHAR action
    VARCHAR entity_type
    BIGINT entity_id
    VARCHAR description
    TIMESTAMP timestamp
  }

  OTP_VERIFICATION {
    BIGINT id PK
    VARCHAR email
    VARCHAR otp
    VARCHAR purpose
    BOOLEAN verified
    TIMESTAMP created_at
    TIMESTAMP expiry_time
  }

  CONTACT_MESSAGE {
    BIGINT id PK
    VARCHAR name
    VARCHAR email
    VARCHAR subject
    VARCHAR message
    TIMESTAMP created_at
  }

  USERS ||--o{ PROJECTS : manages
  USERS ||--o{ PROJECT_MEMBERS : member
  PROJECTS ||--o{ PROJECT_MEMBERS : includes

  PROJECTS ||--o{ ISSUES : contains
  USERS ||--o{ ISSUES : assigned_to

  PROJECTS ||--o{ SLA_POLICIES : has
  ISSUES ||--o{ SLA_BREACHES : breaches

  ISSUES ||--o{ ISSUE_ACTIVITIES : timeline
  USERS ||--o{ ISSUE_ACTIVITIES : performed

  ISSUES ||--o{ ISSUE_COMMENTS : has
  USERS ||--o{ ISSUE_COMMENTS : author

  ISSUES ||--o{ ISSUE_ATTACHMENTS : has
  USERS ||--o{ ISSUE_ATTACHMENTS : uploads

  USERS ||--o{ USER_NOTIFICATIONS : inbox
  NOTIFICATIONS ||--o{ USER_NOTIFICATIONS : delivered
